src/main/java/com/example/Rental/Errors/ItemNotFoundException.java
package com.example.Rental.Errors;


public class ItemNotFoundException extends RuntimeException {
    public ItemNotFoundException(String message) {
        super(message);
    }

}
